setting up assumed parameterss

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -83,6 +83,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estimating cohort risk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Assume $P_{{infection}}$ is homogenous and homogenous both spatially and across population subsets\n",
+    "- Specify assumed rates for $P_{{{{hospitalization}}_{{age}}}}$ and $P_{{{{death}}_{{age}}}}$\n",
+    "- Specify assumed rates for $P_{{{{absence}}_{{non-illness}}}}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
