good data links are starting to come in for epidemeology models

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -50,6 +50,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Sources (keep it simple and focus on building the models)\n",
+    "- https://covidtracking.com/api/\n",
+    "- New York Times"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
