loaded nyt data

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,13 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd"
    ]
   },
   {
@@ -56,6 +58,16 @@
     "Data Sources (keep it simple and focus on building the models)\n",
     "- https://covidtracking.com/api/\n",
     "- New York Times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nytCountyData = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\covid\\\\covid-19-data\\\\us-counties.csv\"\n",
+    "df_nytCountyData = pd.read_csv(nytCountyData)"
    ]
   },
   {
