--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -41,7 +41,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "from ipypb import track"
    ]
   },
   {
@@ -67,6 +68,16 @@
    "outputs": [],
    "source": [
     "nytCountyData = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\covid\\\\covid-19-data\\\\us-counties.csv\"\n",
+    "shp_USCounties = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_county\\\\tl_2017_us_county.shp\"\n",
+    "shp_USStates = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_state\\\\tl_2017_us_state.shp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_nytCountyData = pd.read_csv(nytCountyData)"
    ]
   },
@@ -220,53 +231,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipypb import track"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"100\" value=\"18\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>18%</strong></span>\n",
-       "<span class=\"Iteration-label\">18/100</span>\n",
-       "<span class=\"Time-label\">[00:02<00:00, 0.10s/it]</span></div>"
-      ],
-      "text/plain": [
-       "\u001b[A\u001b[2K\r",
-       " [██████████##################################################] 18/100 [00:02<00:00, 0.10s/it]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "for i in track(range(0,100)):\n",
-    "    time.sleep(0.1)"
-   ]
   },
   {
    "cell_type": "code",
