--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,107 +78,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_nytCountyData = pd.read_csv(nytCountyData)"
+    "df_nytCountyData = pd.read_csv(nytCountyData)\n",
+    "gdf_USCounties = gpd.read_file(shp_USCounties)\n",
+    "gdf_USStates = gpd.read_file(shp_USStates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>county</th>\n",
-       "      <th>state</th>\n",
-       "      <th>fips</th>\n",
-       "      <th>cases</th>\n",
-       "      <th>deaths</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-21</td>\n",
-       "      <td>Snohomish</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53061.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-22</td>\n",
-       "      <td>Snohomish</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53061.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>Snohomish</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53061.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>Cook</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>17031.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>Snohomish</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53061.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date     county       state     fips  cases  deaths\n",
-       "0  2020-01-21  Snohomish  Washington  53061.0      1       0\n",
-       "1  2020-01-22  Snohomish  Washington  53061.0      1       0\n",
-       "2  2020-01-23  Snohomish  Washington  53061.0      1       0\n",
-       "3  2020-01-24       Cook    Illinois  17031.0      1       0\n",
-       "4  2020-01-24  Snohomish  Washington  53061.0      1       0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_nytCountyData.head()"
    ]
