converted county data fips geoid to int

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -218,7 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_USCounties[\"GEOID\"] = gdf_USCounties[\"GEOID\"].astype(\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +404,7 @@
        "4  -098.0468422  POLYGON ((-98.27367 40.08940, -98.27367 40.089...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
