--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -227,7 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_USCounties = gdf_USCounties[[\"STATEFP\",\"COUNTYFP\",\"GEOID\",\"NAME\",\"NAMELSAD\",\"geometry\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -253,21 +262,9 @@
        "      <th></th>\n",
        "      <th>STATEFP</th>\n",
        "      <th>COUNTYFP</th>\n",
-       "      <th>COUNTYNS</th>\n",
        "      <th>GEOID</th>\n",
        "      <th>NAME</th>\n",
        "      <th>NAMELSAD</th>\n",
-       "      <th>LSAD</th>\n",
-       "      <th>CLASSFP</th>\n",
-       "      <th>MTFCC</th>\n",
-       "      <th>CSAFP</th>\n",
-       "      <th>CBSAFP</th>\n",
-       "      <th>METDIVFP</th>\n",
-       "      <th>FUNCSTAT</th>\n",
-       "      <th>ALAND</th>\n",
-       "      <th>AWATER</th>\n",
-       "      <th>INTPTLAT</th>\n",
-       "      <th>INTPTLON</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -276,105 +273,45 @@
        "      <th>0</th>\n",
        "      <td>31</td>\n",
        "      <td>039</td>\n",
-       "      <td>00835841</td>\n",
        "      <td>31039</td>\n",
        "      <td>Cuming</td>\n",
        "      <td>Cuming County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1477641638</td>\n",
-       "      <td>10701538</td>\n",
-       "      <td>+41.9158651</td>\n",
-       "      <td>-096.7885168</td>\n",
        "      <td>POLYGON ((-97.01952 42.00410, -97.01952 42.004...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>53</td>\n",
        "      <td>069</td>\n",
-       "      <td>01513275</td>\n",
        "      <td>53069</td>\n",
        "      <td>Wahkiakum</td>\n",
        "      <td>Wahkiakum County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>680956787</td>\n",
-       "      <td>61588406</td>\n",
-       "      <td>+46.2946377</td>\n",
-       "      <td>-123.4244583</td>\n",
        "      <td>POLYGON ((-123.43639 46.23820, -123.44759 46.2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>35</td>\n",
        "      <td>011</td>\n",
-       "      <td>00933054</td>\n",
        "      <td>35011</td>\n",
        "      <td>De Baca</td>\n",
        "      <td>De Baca County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>6016761648</td>\n",
-       "      <td>29147345</td>\n",
-       "      <td>+34.3592729</td>\n",
-       "      <td>-104.3686961</td>\n",
        "      <td>POLYGON ((-104.56739 33.99757, -104.56772 33.9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>31</td>\n",
        "      <td>109</td>\n",
-       "      <td>00835876</td>\n",
        "      <td>31109</td>\n",
        "      <td>Lancaster</td>\n",
        "      <td>Lancaster County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>339</td>\n",
-       "      <td>30700</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2169252486</td>\n",
-       "      <td>22867561</td>\n",
-       "      <td>+40.7835474</td>\n",
-       "      <td>-096.6886584</td>\n",
        "      <td>POLYGON ((-96.91060 40.95841, -96.91060 40.958...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>31</td>\n",
        "      <td>129</td>\n",
-       "      <td>00835886</td>\n",
        "      <td>31129</td>\n",
        "      <td>Nuckolls</td>\n",
        "      <td>Nuckolls County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1489645186</td>\n",
-       "      <td>1718484</td>\n",
-       "      <td>+40.1764918</td>\n",
-       "      <td>-098.0468422</td>\n",
        "      <td>POLYGON ((-98.27367 40.08940, -98.27367 40.089...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -382,35 +319,37 @@
        "</div>"
       ],
       "text/plain": [
-       "  STATEFP COUNTYFP  COUNTYNS  GEOID       NAME          NAMELSAD LSAD CLASSFP  \\\n",
-       "0      31      039  00835841  31039     Cuming     Cuming County   06      H1   \n",
-       "1      53      069  01513275  53069  Wahkiakum  Wahkiakum County   06      H1   \n",
-       "2      35      011  00933054  35011    De Baca    De Baca County   06      H1   \n",
-       "3      31      109  00835876  31109  Lancaster  Lancaster County   06      H1   \n",
-       "4      31      129  00835886  31129   Nuckolls   Nuckolls County   06      H1   \n",
+       "  STATEFP COUNTYFP  GEOID       NAME          NAMELSAD  \\\n",
+       "0      31      039  31039     Cuming     Cuming County   \n",
+       "1      53      069  53069  Wahkiakum  Wahkiakum County   \n",
+       "2      35      011  35011    De Baca    De Baca County   \n",
+       "3      31      109  31109  Lancaster  Lancaster County   \n",
+       "4      31      129  31129   Nuckolls   Nuckolls County   \n",
        "\n",
-       "   MTFCC CSAFP CBSAFP METDIVFP FUNCSTAT       ALAND    AWATER     INTPTLAT  \\\n",
-       "0  G4020  None   None     None        A  1477641638  10701538  +41.9158651   \n",
-       "1  G4020  None   None     None        A   680956787  61588406  +46.2946377   \n",
-       "2  G4020  None   None     None        A  6016761648  29147345  +34.3592729   \n",
-       "3  G4020   339  30700     None        A  2169252486  22867561  +40.7835474   \n",
-       "4  G4020  None   None     None        A  1489645186   1718484  +40.1764918   \n",
-       "\n",
-       "       INTPTLON                                           geometry  \n",
-       "0  -096.7885168  POLYGON ((-97.01952 42.00410, -97.01952 42.004...  \n",
-       "1  -123.4244583  POLYGON ((-123.43639 46.23820, -123.44759 46.2...  \n",
-       "2  -104.3686961  POLYGON ((-104.56739 33.99757, -104.56772 33.9...  \n",
-       "3  -096.6886584  POLYGON ((-96.91060 40.95841, -96.91060 40.958...  \n",
-       "4  -098.0468422  POLYGON ((-98.27367 40.08940, -98.27367 40.089...  "
+       "                                            geometry  \n",
+       "0  POLYGON ((-97.01952 42.00410, -97.01952 42.004...  \n",
+       "1  POLYGON ((-123.43639 46.23820, -123.44759 46.2...  \n",
+       "2  POLYGON ((-104.56739 33.99757, -104.56772 33.9...  \n",
+       "3  POLYGON ((-96.91060 40.95841, -96.91060 40.958...  \n",
+       "4  POLYGON ((-98.27367 40.08940, -98.27367 40.089...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gdf_USCounties.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_countyTimeSeries = pd.merge(left=df_nytCountyData,right=gdf_USCounties,left_on=\"GEOID\",right_on=populationServedByCounty.index)"
    ]
   },
   {
