--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,8 @@
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "from ipypb import track"
+    "from ipypb import track\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -511,6 +512,37 @@
    ],
    "source": [
     "gdf_countyTimeSeries.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         True\n",
+       "1         True\n",
+       "2         True\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "15579    False\n",
+       "15580    False\n",
+       "15581    False\n",
+       "15582    False\n",
+       "15583    False\n",
+       "Name: date, Length: 15584, dtype: bool"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_countyTimeSeries[\"date\"] <= dt.datetime(month=3,day=1,year=2020)"
    ]
   },
   {
