setting up interactive

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -44,7 +44,9 @@
     "import geopandas as gpd\n",
     "from ipypb import track\n",
     "import datetime as dt\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable"
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interact_manual"
    ]
   },
   {
