setting up plot controller

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,6 +575,20 @@
     "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
     "filterByDate(gdf_countyTimeSeries).cx[-125:-50, 20:70].plot(\"cases\",ax=ax,cax=cax,legend=\"True\")\n",
     "gdf_USStates.boundary.cx[-125:-50, 20:70].plot(ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotController(month=3,day=1,year=2020):\n",
+    "    fig,ax = plt.subplots(figsize=(50,20))\n",
+    "    divider = make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "    filterByDate(gdf_countyTimeSeries,year=year,month=month,day=day).cx[-125:-50, 20:70].plot(\"cases\",ax=ax,cax=cax,legend=\"True\")\n",
+    "    gdf_USStates.boundary.cx[-125:-50, 20:70].plot(ax=ax)"
    ]
   },
   {
