set up interactive map

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -592,6 +592,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6acdd6b1135445fafee6e6e9b98de45",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=3, description='month', max=12, min=1), IntSlider(value=27, description=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plotController(month=3, day=1, year=2020)>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interact(plotController,\n",
+    "         month=widgets.IntSlider(min=1,max=12,step=1,value=3),\n",
+    "         day=widgets.IntSlider(min=1,max=31,step=1,value=27),\n",
+    "         year=widgets.IntSlider(min=2019,max=2021,step=1,value=2020),\n",
+    "        )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
