tryign to create an animation

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,8 @@
     "import datetime as dt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interact_manual"
+    "from ipywidgets import interact, interact_manual\n",
+    "from celluloid import Camera"
    ]
   },
   {
@@ -627,6 +628,24 @@
     "         day=widgets.IntSlider(min=1,max=31,step=1,value=27),\n",
     "         year=widgets.IntSlider(min=2019,max=2021,step=1,value=2020),\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's try making an animation!\n",
+    "fig,ax = plt.subplots(figsize=(50,20))\n",
+    "camera = Camera(fig)\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "for day in range(1,28):\n",
+    "    filterByDate(gdf_countyTimeSeries,year=2020,month=3,day=day).cx[-125:-50, 20:70].plot(\"cases\",ax=ax,cax=cax,legend=\"True\")\n",
+    "    gdf_USStates.boundary.cx[-125:-50, 20:70].plot(ax=ax)\n",
+    "    camera.snap()\n",
+    "animation = camera.animate()"
    ]
   },
   {
