parsing the daily updates folder

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,8 @@
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interact_manual\n",
-    "from celluloid import Camera"
+    "from celluloid import Camera\n",
+    "import os"
    ]
   },
   {
@@ -87,6 +88,13 @@
     "df_nytCountyData = pd.read_csv(nytCountyData)\n",
     "gdf_USCounties = gpd.read_file(shp_USCounties)\n",
     "gdf_USStates = gpd.read_file(shp_USStates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the NYT Data"
    ]
   },
   {
@@ -629,6 +637,55 @@
     "         year=widgets.IntSlider(min=2019,max=2021,step=1,value=2020),\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the JHU Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dailyUpdates = os.listdir(folderOfJHUData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dailyUpdatesDict = {}\n",
+    "for file in dailyUpdates:\n",
+    "    if \".csv\" in file:\n",
+    "        dailyUpdatesDict[dt.datetime.strptime(file.split('.')[0],\"%m-%d-%Y\")] = file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
