setting up jhu data fips codes

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -678,7 +678,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_MostRecentJHU = df_MostRecentJHU.dropna(subset=[\"FIPS\"])\n",
+    "df_MostRecentJHU[\"FIPS\"] = df_MostRecentJHU[\"FIPS\"].astype(\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +742,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>45001.0</td>\n",
+       "      <td>45001</td>\n",
        "      <td>Abbeville</td>\n",
        "      <td>South Carolina</td>\n",
        "      <td>US</td>\n",
@@ -734,7 +757,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>22001.0</td>\n",
+       "      <td>22001</td>\n",
        "      <td>Acadia</td>\n",
        "      <td>Louisiana</td>\n",
        "      <td>US</td>\n",
@@ -749,7 +772,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>51001.0</td>\n",
+       "      <td>51001</td>\n",
        "      <td>Accomack</td>\n",
        "      <td>Virginia</td>\n",
        "      <td>US</td>\n",
@@ -764,7 +787,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>16001.0</td>\n",
+       "      <td>16001</td>\n",
        "      <td>Ada</td>\n",
        "      <td>Idaho</td>\n",
        "      <td>US</td>\n",
@@ -779,7 +802,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>19001.0</td>\n",
+       "      <td>19001</td>\n",
        "      <td>Adair</td>\n",
        "      <td>Iowa</td>\n",
        "      <td>US</td>\n",
@@ -797,12 +820,12 @@
        "</div>"
       ],
       "text/plain": [
-       "      FIPS     Admin2  Province_State Country_Region          Last_Update  \\\n",
-       "0  45001.0  Abbeville  South Carolina             US  2020-03-28 23:05:37   \n",
-       "1  22001.0     Acadia       Louisiana             US  2020-03-28 23:05:37   \n",
-       "2  51001.0   Accomack        Virginia             US  2020-03-28 23:05:37   \n",
-       "3  16001.0        Ada           Idaho             US  2020-03-28 23:05:37   \n",
-       "4  19001.0      Adair            Iowa             US  2020-03-28 23:05:37   \n",
+       "    FIPS     Admin2  Province_State Country_Region          Last_Update  \\\n",
+       "0  45001  Abbeville  South Carolina             US  2020-03-28 23:05:37   \n",
+       "1  22001     Acadia       Louisiana             US  2020-03-28 23:05:37   \n",
+       "2  51001   Accomack        Virginia             US  2020-03-28 23:05:37   \n",
+       "3  16001        Ada           Idaho             US  2020-03-28 23:05:37   \n",
+       "4  19001      Adair            Iowa             US  2020-03-28 23:05:37   \n",
        "\n",
        "         Lat       Long_  Confirmed  Deaths  Recovered  Active  \\\n",
        "0  34.223334  -82.461707          3       0          0       0   \n",
@@ -819,7 +842,7 @@
        "4                Adair, Iowa, US  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
