loaded population data

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -69,14 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "nytCountyData = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\covid\\\\covid-19-data\\\\us-counties.csv\"\n",
     "folderOfJHUData = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\covid\\\\COVID-19\\\\csse_covid_19_data\\\\csse_covid_19_daily_reports\\\\\"\n",
     "shp_USCounties = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_county\\\\tl_2017_us_county.shp\"\n",
-    "shp_USStates = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_state\\\\tl_2017_us_state.shp\""
+    "shp_USStates = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_state\\\\tl_2017_us_state.shp\"\n",
+    "excel_CountyPopulations = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\co-est2019-alldata.xlsx\""
    ]
   },
   {
@@ -89,6 +90,29 @@
     "gdf_USCounties = gpd.read_file(shp_USCounties)\n",
     "gdf_USStates = gpd.read_file(shp_USStates)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_countyPouplations = pd.read_excel(excel_CountyPopulations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add in population data to counties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
