county populations is not correct, I'll need to circle back to it

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,33 +122,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       4903185\n",
-       "1         55869\n",
-       "2        223234\n",
-       "3         24686\n",
-       "4         22394\n",
-       "         ...   \n",
-       "3188      42343\n",
-       "3189      23464\n",
-       "3190      20226\n",
-       "3191       7805\n",
-       "3192       6927\n",
-       "Name: POPESTIMATE2019, Length: 3193, dtype: int64"
+       "0        1000\n",
+       "1        1100\n",
+       "2        1300\n",
+       "3        1500\n",
+       "4        1700\n",
+       "        ...  \n",
+       "3188    56370\n",
+       "3189    56390\n",
+       "3190    56410\n",
+       "3191    56430\n",
+       "3192    56450\n",
+       "Name: fips, Length: 3193, dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_countyPouplations[\"POPESTIMATE2019\"]"
+    "df_countyPouplations[\"fips\"]"
    ]
   },
   {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,46 @@
    "outputs": [],
    "source": [
     "gdf_USCounties = gdf_USCounties[[\"STATEFP\",\"COUNTYFP\",\"GEOID\",\"NAME\",\"NAMELSAD\",\"geometry\",\"POPESTIMATE2019\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3193"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_countyPouplations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1253"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_USCounties)"
    ]
   },
   {
