added one last reference, now time to sleep

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2342,6 +2342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a look at https://github.com/Lewuathe/COVID19-SIR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
