ok, one more reference. now sleep

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2349,6 +2349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also take a look at https://towardsdatascience.com/social-distancing-to-slow-the-coronavirus-768292f04296"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
