darn two more refs

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2356,6 +2356,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/closedloop-ai/cv19index\n",
+    "\n",
+    "https://github.com/CodeForPhilly/chime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
