this time i'm actually going to bed

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2365,6 +2365,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/coronafighter/coronaSEIR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
