let's try our own epidemeology model

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1415,6 +1415,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Playing with SIR models from \"Mathematical Epidemiology\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
