set up basic equations

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1418,15 +1418,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Playing with SIR models from \"Mathematical Epidemiology\""
+    "Playing with SIR models from \"Mathematical Epidemiology\" page 23\n",
+    "\n",
+    "$$S(t+\\Delta t) = S(t) - \\beta S(t)I(t)\\Delta t$$\n",
+    "\n",
+    "$$I(t+\\Delta t) = I(t) + \\beta S(t)I(t)\\Delta t - \\gamma I(t)\\Delta t$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "γ = 0.2\n",
+    "R0 = 18\n",
+    "β = 3\n",
+    "Δt = 0.1\n",
+    "N = 7_781_984"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I0 = 1\n",
+    "S0 = N"
+   ]
   }
  ],
  "metadata": {
