added parameter descriptions

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1434,15 +1434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 7_781_984\n",
-    "γ = 0.2\n",
-    "R0 = 18\n",
-    "β = R0 * γ / N\n",
-    "Δt = 0.1"
+    "N = 7_781_984 # Population\n",
+    "γ = 0.2 # Recovery rate, meaning that the mean infectious period is 1/γ\n",
+    "R0 = 18 # Basic reproduction number\n",
+    "β = R0 * γ / N # Transmission rate per capita\n",
+    "Δt = 0.1 # Time step for the solution method"
    ]
   },
   {
